tests/fail/registering/term typed with a pure sort2.mmu
(sort sfree )
(term f ((x s)) (s ()))
(def y () (s ()) ((x s)) (f x))
